--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@rainbow-me/rainbowkit": "^2.0.1",
     "@tanstack/react-query": "5.0.5",
     "react": "^18.2.0",
+    "react-csv-downloader": "^3.1.0",
     "react-dom": "^18.2.0",
     "viem": "latest",
     "wagmi": "latest"
